# FileHasher

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  FileHasher.spec  README.md  pyproject.toml
.github/workflows/: build-windows.yml
assets/: icon.icns
scripts/: make_icons.py
src/filehasher/: app.py  controller.py  hashing.py  resources.py  ui.py
tests/: test_controller.py  test_hashing.py
