[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "filehasher"
version = "0.1.0"
description = "Aplicación de escritorio para calcular hashes de archivos."
requires-python = ">=3.13"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
